rnsc/test_data/rns_integration/error/lexer/directives/dot_dot_end.rns
.method

..class_end ; not valid

